--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <h2>Contact Me</h2>
             <address>
                 <ul>
-                    <a href="https://linkedin.com/in/lucaslatour">LinkedIn</a>
-                    <a href="https://github.com/lucasjlatour">GitHub</a>
-                    <a href="tel:+6143778678">(614) 377-8678</a>
-                    <a href="mailto:lucasjlatour@gmail.com">lucasjlatour@gmail.com</a>
+                    <li><a href="https://linkedin.com/in/lucaslatour">LinkedIn</a></li>
+                    <li><a href="https://github.com/lucasjlatour">GitHub</a></li>
+                    <li><a href="tel:+6143778678">(614) 377-8678</a></li>
+                    <li><a href="mailto:lucasjlatour@gmail.com">lucasjlatour@gmail.com</a></li>
                 </ul>
             </address>
         </section>
