Make heading copy consistent

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 <!--About me-->          
         <section>
-            <h2>About me</h2>
+            <h2>About Me</h2>
             <p>I'm a life-long learner who loves leading and working on teams that are changing the world. Outside of development, I spend my time reading philosophy books, drinking coffee, and making music.</p>
             
-            <h3>Current areas of exploration</h3>
+            <h3>Current areas of exploration:</h3>
             <ul>
                 <li>Logic</li>
                 <li>Making Music</li>
                 <li>Exercise</li>
             </ul>
             
-            <h3>Favorite movies</h3>
+            <h3>Favorite movies:</h3>
             <ol>
                 <li>Good Will Hunting</li>
                 <li>A Few Good Men</li>
